crates/tui/tests/snapshots/mobile_ui__mobile_empty_sessions_39x18.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: screen(&mut m)
---
Sessions (0) · j/k move · Enter open   
Sessions j/k move                      
No sessions yet.                       
Press n to start one.                  
A repository is optional.              
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
Enter open Esc back                    
n new r name x del p sort / copy
