crates/tui/tests/snapshots/mobile_ui__mobile_help_32x12.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: out
---
╭ Ask Lazybox ─────────────────╮
│New question · Tab mode       │
│New question › ▌              │
│──────────────────────────────│
│  Keys in the mobile UI       │
│   Ctrl-T   Sessions          │
│   Ctrl-G   Settings          │
│   Ctrl-Q   detach from       │
│Sessions                      │
│   Swipe    scroll chat       │
│Enter ask · ^N/^P/swipe · Esc │
╰──────────────────────────────╯
