crates/tui/tests/snapshots/mobile_ui__mobile_new_session_39x18.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: screen(&mut m)
---
╭ New session · area ─────────────────╮
│Choose an area · repository optional │
│                                     │
│▸     No repository                  │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│j/k move  Enter pick                 │
│h info  Esc back                     │
╰─────────────────────────────────────╯
