crates/tui/tests/snapshots/mobile_ui__mobile_priority_32x12.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: priority
---
Ctrl-T Sessions | phone         
Priority j/k move   │           
● a phone · codex   │           
! b phone · codex   │           
✓ c phone · codex   │           
Move phone          │           
Enter move Esc back │           
                                
                                
                                
                                
Pick position · Esc cancel
