crates/tui/tests/snapshots/mobile_ui__mobile_rail_collapsed_39x18.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: collapsed
---
Ctrl-T Sessions | phone                
●                                      
!                                      
✓                                      
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
^T sessions ^G settings ^D live
