crates/tui/tests/snapshots/mobile_ui__mobile_rail_expanded_39x18.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: expanded
---
Ctrl-T Sessions | phone                
Sessions j/k move        │             
● a phone · codex        │             
! b phone · codex        │             
✓ c phone · codex        │             
working · codex          │             
Enter open Esc back      │             
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
n new r name x del p sort / copy
