crates/tui/tests/snapshots/mobile_ui__mobile_runner_39x18.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: out
---
╭ New session · run ──────────────────╮
│team/repo · choose what to run       │
│                                     │
│▸     claude (default)               │
│      codex                          │
│      Shell                          │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│                                     │
│j/k move  Enter pick                 │
│h info  Esc back                     │
╰─────────────────────────────────────╯
