crates/tui/tests/snapshots/mobile_ui__mobile_sessions_39x18.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: out
---
Sessions (1) · j/k move · Enter open   
Sessions j/k move                      
● a Phone notes · codex                
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
                                       
working · codex                        
Enter open Esc back                    
n new r name x del p sort / copy
