crates/tui/tests/snapshots/mobile_ui__mobile_settings_32x12.snap
---
source: crates/tui/tests/mobile_ui.rs
expression: out
---
╭ Settings ────────────────────╮
│1 Providers · h/l tabs        │
│──────────────────────────────│
│▸ Edit roles + filters · GitHu│
│  Edit providers (github / lin│
│                              │
│                              │
│                              │
│                              │
│                              │
│jk move Enter pick ? ask Esc b│
╰──────────────────────────────╯
